<resources>
    <string name="app_name">TK Intranet</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="txt_lable_tip">手机诺特用户登录</string>
    <string name="txt_login_button">Log in</string>
    <string name="txt_hint_password">Password</string>
    <string name="txt_hint_email">Email</string>
    <string name="txt_username_invalid">Email is required.</string>
    <string name="txt_pwd_invalid">Password is required.</string>
    <string name="txt_retrieve_password">Forget Passoword</string>
    <string name="txt_apply_account">Apply Group Account</string>
    <string name="txt_know">知道了</string>
    <string name="txt_my_goods_detail">Gift Details</string>
    <string name="txt_login_tip">登记成功，请尽快至Admin处领取！</string>
    <string name="txt_login_failed">Failed to log in. Please try again.</string>
    <string name="txt_input_email_to_retrieve_password">Input your email</string>
    <string name="txt_sure">OK</string>
    <string name="txt_activity_item">Event</string>
    <string name="txt_activity_detail">Event Deatils</string>
    <string name="txt_activity_detail_status">In Progress</string>
    <string name="txt_train_item">Training</string>
    <string name="txt_registration_count">15</string>
    <string name="txt_counts"><font color="#D0021B">%1$s</font>/%2$s人</string>
    <string name="txt_line">/</string>
    <string name="txt_event_type">Event Type</string>
    <string name="txt_integral_type">Point Type</string>
    <string name="txt_originator">Initiator</string>
    <string name="txt_lecturer">Lecturer</string>
    <string name="txt_address">Address</string>
    <string name="txt_recipient">Invited Guests</string>
    <string name="txt_activity_max">Max No. of Attendees</string>
    <string name="txt_technical_training">Technical Training</string>
    <string name="txt_train_default_status">Pending</string>
    <string name="txt_enroll_time">Time of Sign Up:&#160;</string>
    <string name="txt_btn_registration">Sign Up</string>
    <string name="txt_btn_check_in">Sign In</string>
    <string name="txt_registration_time">从2014/10/22 至 2014/10/28</string>
    <string name="txt_registration_times">2014/10/22 至\n2014/10/28</string>
    <string name="txt_event_time">Event Time:&#160;</string>
    <string name="txt_activity_time">从2014/10/22 10:30 至 2014/10/28 16:30</string>
    <string name="txt_activity_times">2014/10/22 10:30 至\n2014/10/28 16:30</string>
    <string name="txt_train_default_content">活动具体详细内容，活动具体详细内容，活动具体详细内容，活动具体详细内容，活动具体详细内容，活动具体详细内容，活动具体详细内容，活动具体详细内容，活动具体详细内容，活动具体详细内容，活动具体详细内容，活动具体详细内容，活动具体详细内容，活动具体详细内容，活动具体详细内容，活动具体详细内容，活动具体详细内容，活动具体详细内容，活动具体详细内容，活动具体详细内容，活动具体详细内容，活动具体详细内容，活动具体详细内容，活动具体详细内容，活动具体详细内容，活动具体详细内容，活动具体详细内容，活动具体详细内容，</string>
    <string name="txt_train_lv_item_title">安卓开发培训</string>
    <string name="txt_event_content">Training Contents</string>
    <string name="txt_originality_item">创意</string>
    <string name="txt_others_item">其他</string>
    <string name="txt_not_beginning">未开始</string>
    <string name="txt_check_in_start">报名中</string>
    <string name="txt_check_in_end">报名结束</string>
    <string name="txt_check_in_on">已报名</string>
    <string name="txt_ing">进行中</string>
    <string name="txt_completed">已完成</string>
    <string name="txt_use">使&#160;&#160;用</string>
    <string name="txt_has_brought">已&#160;&#160;领</string>
    <string name="txt_default_tool">延时工具</string>
    <string name="txt_delay_tool">xo grou马克杯一只</string>
    <string name="txt_integral">1000积分</string>
    <string name="txt_my_goods">My Gifts</string>
    <string name="txt_uploader_resource">Event has ended. Please upload photos or documents to Intranet.</string>
    <string name="event_status_1">Pending</string>
    <string name="event_status_2">Sign Up</string>
    <string name="event_status_3">Signed Up</string>
    <string name="event_status_4">Sign Up - Ends</string>
    <string name="event_status_5">In Progress</string>
    <string name="event_status_6">Ended</string>
    <string name="event_status_2_not_allowed">You are not invited.</string>
    <string name="txt_btn_ok">OK</string>
    <string name="txt_btn_cancel">CANCEL</string>
    <string name="txt_btn_title">Whoops!</string>
    <string name="dialog_content_ensure_exchange">Are you sure to exchange&#160; </string>
    <string name="dialog_content_exchange_success">Exchanged successfully.</string>
    <string name="dialog_content_exchange_failure">Failed to exchange.</string>
    <string name="dialog_title_reminder">Attention</string>
    <string name="dialog_content_login_failed">Email or password is incorrect.</string>
    <string name="dialog_string_space"> </string>
    <string name="dialog_btn_call">Call</string>
    <string name="dialog_content_call">Call Phone</string>
    <string name="message_press_once_more_time_to_exit">Click one more time to exist app.</string>
    <string name="actionbar_title_master_page">Admin</string>
    <string name="actionbar_title_my_goods">My Gifts</string>
    <string name="actionbar_title_home_page">&#160;&#160;Homepage</string>
    <string name="actionbar_title_integral_rank_page">Point Ranking</string>
    <string name="actionbar_title_my_integral_page">My Points</string>
    <string name="actionbar_title_search_integral_page">Point Search</string>
    <string name="actionbar_title_team_integral_page">Team Points</string>
    <string name="actionbar_title_search_result">Search Result</string>
    <string name="actionbar_title_integral_exchange_page">Point Exchange</string>
    <string name="actionbar_title_news_list_page">Notification List</string>
    <string name="actionbar_title_news_details_page">News Details</string>
    <string name="actionbar_title_my_training_page">My Events</string>
    <string name="actionbar_title_message_manage">Notification Management</string>
    <string name="actionbar_title_message_details">Notification Details</string>
    <string name="actionbar_title_message_add_new">Add Notification</string>
    <string name="actionbar_title_edit_personnel_information">编辑员工资料</string>
    <string name="actionbar_title_add_personnel">新增员工</string>
    <string name="actionbar_title_integral_manager_page">Point Management</string>
    <string name="actionbar_title_activity_manage">Event Management</string>
    <string name="actionbar_title_activity_type_manage">Event Type Management</string>
    <string name="actionbar_title_search_employee">Search Staff</string>
    <string name="actionbar_title_photo_wall_page">Staff Wall</string>
    <string name="actionbar_title_self_introduction_page">Profile</string>
    <string name="actionbar_title_my_account_page">Homepage</string>
    <string name="actionbar_title_event">Recent Events</string>
    <string name="actionbar_title_month_stars_page">Staff of the Month</string>
    <string name="actionbar_title_new_comer_page">New Staff</string>
    <string name="actionbar_title_retrieve_password">Forget Password</string>
    <string name="apostrophe_text">···</string>
    <string name="date_time_format">yyyy-MM-dd HH:mm</string>
    <string name="month_name_format">MMMM yyyy</string>
    <string name="time_format">HH:mm</string>
    <string name="date_format">yyyy-MM-dd</string>
    <string name="update_time">更新于</string>
    <string name="no_update_time">未更新</string>
    <string name="tab_Current_Month_Person">Staff Monthly</string>
    <string name="tab_Current_Year_Person">Staff Yearly</string>
    <string name="tab_Current_Quarter_Team">Team Quarterly</string>
    <string name="tab_Current_Year_Team">Team Yearly</string>
    <string name="level_one">Level 1</string>
    <string name="level_two">Level 2</string>
    <string name="level_three">Level 3</string>
    <string name="level_four">Level 4</string>
    <string name="level_five">Level 5</string>
    <string name="update_text">Upgrade to</string>
    <string name="update_tips_text">还需要</string>
    <string name="expectation_text"> </string>
    <string name="the_highest_level_tips_text">恭喜，你已是最高等级/宗师，请受我一拜</string>
    <string name="the_error_message">Error! Please re-load again.</string>
    <string name="date_is_empty_tips">Select Date</string>
    <string name="date_is_error_tips">End date should be later than start date.</string>
    <string name="my_integral_title_text">Points:&#160;</string>
    <string name="my_integral_grade_title_text">Privilege:&#160;</string>
    <string name="btn_upgrade_text">Earn Points</string>
    <string name="tv_detail_title">Point Logs of Recent 30 Days</string>
    <string name="et_start_date_hint">Start Date</string>
    <string name="et_end_date_hint">End Date</string>
    <string name="btn_search_text">Search</string>
    <string name="tv_search_result_title_text">Search Result</string>
    <string name="tv_the_first_name_text">Level 5:&#160;</string>
    <string name="tv_the_second_name_text">Level 4:&#160;</string>
    <string name="tv_the_third_name_text">Level 3:&#160;</string>
    <string name="tv_the_fourth_name_text">Level 2:&#160;</string>
    <string name="tv_the_fifth_name_text">Level 1:&#160;</string>
    <string name="spinner_default_choose">All Staff</string>
    <string name="spinner_member_choose">Staff</string>
    <string name="team_integral_title_text">积分：</string>
    <string name="team_integral_member_amount_text">人数：</string>
    <string name="tv_team_detail_title">本月团队积分明细</string>
    <string name="tv_date_text"> to </string>
    <string name="tv_rank_message_item_even_more_text">More...</string>
    <string name="btn_exchange_text">Exchange</string>
    <string name="tv_even_more_text">More</string>
    <string name="actionbar_title_change_password_page">&#160;&#160;&#160;Change Password</string>
    <string name="activity_type">活动类型</string>
    <string name="menu_item_language_title">中 文</string>
    <string name="menu_item_password_title">Change password</string>
    <string name="menu_item_about_tk_title">About TK</string>
    <string name="menu_item_logout_title">Log Out</string>
    <string name="activity_input_name">请输入活动名称</string>
    <string name="activity_capacity">名额上限</string>
   <string name="activity_address">活动地点</string>
    <string name="create_activity_title">标题</string>
    <string name="create_activity_choose_activity_tpye">选择活动类型</string>
    <string name="activity_time">活动时间</string>
    <string name="input_activity_start_time">选择开始时间</string>
    <string name="input_activity_input_end_time">选择结束时间</string>
    <string name="choose_the_address">选择常用地址</string>
    <string name="input_the_baidu_address">百度地址</string>
    <string name="the_activity_content">活动内容</string>
    <string name="input_activity_detail">在这儿写下您要举办的活动的详细内容...</string>
    <string name="next_step">下一步</string>
    <string name="the_activity_initiator">发起者</string>
    <string name="choose_one_initiator">选择发起者</string>
    <string name="integral_type">积分类型</string>
    <string name="choose_the_number">输入人数</string>
    <string name="choose_the_integral_type">选择积分类型</string>
    <string name="activity_invitees">受邀者</string>
    <string name="staff">工作人员</string>
    <string name="activity_tag">活动标签</string>
    <string name="activity_inter">内</string>
    <string name="activity_outer">外</string>
    <string name="activity_need_sign">需要报名</string>
    <string name="activity_need_sign_yes">是</string>
    <string name="activity_need_sign_no">否</string>
    <string name="activity_sign_date">报名时间</string>
    <string name="activity_begin_sign_date">选择开始时间</string>
    <string name="activity_end_sign_date">选择结束时间</string>
    <string name="activity_release">发布</string>
    <string name="activity_max_number">(MAX 1,000)</string>
    <string name="save">保存</string>
    <string name="cancel">取消</string>
    <string name="input_address">请输入常用地址</string>
    <string name="address_wordsum">/150</string>
    <string name="address_wordcount">150</string>
</resources>