<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/tv_create_activity_padding_left"
        android:layout_marginRight="@dimen/tv_create_activity_padding_right"
        android:paddingTop="@dimen/tv_create_activity_padding_top"
        android:paddingBottom="10dp"
        android:gravity="center|left"
        android:text="@string/create_activity_title"
        android:textSize="@dimen/tv_create_activity_text_size"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/tv_create_activity_padding_left"
        android:layout_marginRight="@dimen/tv_create_activity_padding_right"
        android:id="@+id/edt_activity_name"
        android:textSize="@dimen/edt_create_activity_text_size"
        android:gravity="center|left"
        android:singleLine="true"
        android:hint="@string/activity_input_name"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/tv_create_activity_padding_left"
        android:layout_marginRight="@dimen/tv_create_activity_padding_right"
        android:paddingTop="@dimen/tv_create_activity_padding_top"
        android:paddingBottom="10dp"
        android:text="@string/activity_type"
        android:textSize="@dimen/tv_create_activity_text_size"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/tv_create_activity_padding_left"
        android:layout_marginRight="@dimen/tv_create_activity_padding_right"
        android:id="@+id/edt_activity_type"
        android:singleLine="true"
        android:gravity="center|left"
        android:hint="@string/create_activity_choose_activity_tpye"
        android:textSize="@dimen/edt_create_activity_text_size"
        android:drawableRight="@drawable/icon_arrow_down"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/tv_create_activity_padding_left"
        android:paddingRight="@dimen/tv_create_activity_padding_right"
        android:paddingTop="@dimen/tv_create_activity_padding_top"
        android:paddingBottom="10dp"
        android:text="@string/activity_time"
        android:textSize="@dimen/tv_activity_manage_text_size"/>
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:paddingLeft="@dimen/tv_create_activity_padding_left"
       android:paddingRight="@dimen/tv_create_activity_padding_right">
       <EditText
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_weight="1"
           android:id="@+id/edt_activity_start_time"
           android:drawableRight="@drawable/icon_calendar"
           android:paddingRight="10dp"
           android:hint="@string/input_activity_start_time"
           android:textSize="@dimen/edt_create_activity_text_size"/>
       <EditText
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_weight="1"
           android:id="@+id/edt_activity_finish_time"
           android:drawableRight="@drawable/icon_calendar"
           android:textSize="@dimen/edt_create_activity_text_size"
           android:hint="@string/input_activity_input_end_time"/>
   </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/tv_create_activity_padding_left"
        android:paddingRight="@dimen/tv_create_activity_padding_right"
        android:paddingTop="@dimen/tv_create_activity_padding_top"
        android:gravity="center|left"
        android:text="@string/activity_address"
        android:textSize="@dimen/tv_create_activity_text_size"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:paddingLeft="@dimen/tv_create_activity_padding_left"
        android:paddingRight="@dimen/tv_create_activity_padding_right"
        android:orientation="horizontal">
        <RadioGroup
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/rbtn_commonly_address"
                android:checked="true"
                android:layout_weight="1" />
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/rbtn_baidu_address"
                android:layout_weight="1"/>
        </RadioGroup>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="9"
            android:orientation="vertical"
            android:layout_height="match_parent">
         <EditText
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:editable="false"
             android:hint="@string/choose_the_address"
             android:id="@+id/edt_commonly_address"
             android:textSize="@dimen/edt_create_activity_text_size"
             android:drawableRight="@drawable/icon_arrow_down"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:editable="false"
                android:id="@+id/edt_baidu_address"
                android:textSize="@dimen/edt_create_activity_text_size"
                android:hint="@string/input_the_baidu_address"/>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|left"
        android:paddingTop="@dimen/tv_create_activity_padding_top"
        android:paddingLeft="@dimen/tv_create_activity_padding_left"
        android:paddingRight="@dimen/tv_create_activity_padding_right"
        android:textSize="@dimen/tv_create_activity_text_size"
        android:text="@string/the_activity_content"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginLeft="@dimen/tv_create_activity_padding_left"
        android:layout_marginRight="@dimen/tv_create_activity_padding_right"
        android:id="@+id/edt_activity_content"
        android:inputType="textMultiLine"
        android:singleLine="true"
        android:gravity="left"
        android:hint="@string/input_activity_detail"/>
    <Button
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginRight="@dimen/tv_create_activity_padding_right"
        android:background="@color/btn_background_color"
        android:layout_gravity="right"
        android:text="@string/next_step"
        android:textStyle="bold"
        android:textSize="@dimen/edt_create_activity_text_size"
        android:textColor="@color/white"/>

</LinearLayout>