<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/tv_create_activity_padding_left"
    android:layout_marginRight="@dimen/tv_create_activity_padding_right"
    android:layout_marginTop="@dimen/tv_create_activity_padding_top"
    android:gravity="center|left"
    android:text="@string/the_activity_initiator"
    android:textSize="@dimen/tv_create_activity_text_size"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/tv_create_activity_padding_left"
        android:layout_marginRight="@dimen/tv_create_activity_padding_right"
        android:editable="false"
        android:singleLine="true"
        android:id="@+id/et_activity_initiator"
        android:hint="@string/choose_one_initiator"
        android:cursorVisible="false"
        android:textSize="@dimen/edt_create_activity_text_size"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/rl_create_activity_90"
        android:layout_marginLeft="@dimen/tv_create_activity_padding_left"
        android:layout_marginRight="@dimen/tv_create_activity_padding_right"
        android:id="@+id/rl_integral">
        <TextView
            android:layout_width="@dimen/tv_create_activity_70"
            android:layout_height="@dimen/tv_create_activity_45"
            android:gravity="center"
            android:id="@+id/tv_integral"
            android:textSize="@dimen/tv_create_activity_text_size"
            android:text="@string/integral_type"/>
        <TextView
            android:layout_width="@dimen/tv_create_activity_70"
            android:layout_height="@dimen/tv_create_activity_45"
            android:layout_marginRight="@dimen/tv_create_activity_100"
            android:gravity="center"
            android:id="@+id/tv_activity_capacity"
            android:text="@string/activity_capacity"
            android:textSize="@dimen/tv_create_activity_text_size"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/tv_create_activity_100"
            android:layout_alignBaseline="@+id/tv_integral"/>
        <TextView
            android:layout_width="@dimen/tv_create_activity_100"
            android:layout_height="@dimen/tv_create_activity_45"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignRight="@+id/tv_activity_capacity"
            android:layout_alignBaseline="@+id/tv_activity_capacity"
            android:hint="@string/activity_max_number"/>
      <EditText
          android:layout_width="@dimen/tv_create_activity_180"
          android:layout_height="@dimen/tv_create_activity_45"
          android:drawableRight="@drawable/icon_arrow_down"
          android:id="@+id/et_choose_integral_type"
          android:singleLine="true"
          android:editable="false"
          android:cursorVisible="false"
          android:hint="@string/choose_the_integral_type"
          android:layout_below="@+id/tv_integral"/>
        <EditText
            android:layout_width="@dimen/tv_create_activity_180"
            android:layout_height="@dimen/tv_create_activity_45"
            android:id="@+id/et_choose_number"
            android:editable="false"
            android:singleLine="true"
            android:hint="@string/choose_the_number"
            android:inputType="number"
            android:cursorVisible="false"
            android:drawableRight="@drawable/icon_arrow_down"
            android:layout_toRightOf="@+id/et_choose_integral_type"
            android:layout_below="@+id/tv_activity_capacity"/>
    </RelativeLayout>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:editable="false"
        android:cursorVisible="false"
        android:id="@+id/et_invites"
        android:layout_marginTop="@dimen/tv_create_activity_padding_top"
        android:layout_marginLeft="@dimen/tv_create_activity_padding_left"
        android:layout_marginRight="@dimen/tv_create_activity_padding_right"
        android:hint="@string/activity_invitees"
        android:textSize="@dimen/tv_create_activity_text_size"
        android:drawableRight="@drawable/icon_arrow_right"/>
    <EditText
        android:editable="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_staffs"
        android:layout_marginRight="@dimen/tv_create_activity_padding_right"
        android:layout_marginLeft="@dimen/tv_create_activity_padding_left"
        android:layout_marginTop="@dimen/tv_create_activity_padding_top"
        android:hint="@string/staff"
        android:textSize="@dimen/tv_create_activity_text_size"
        android:drawableRight="@drawable/icon_arrow_right"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/tv_create_activity_45"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/tv_create_activity_padding_left"
        android:layout_marginRight="@dimen/tv_create_activity_padding_right" >
     <TextView
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:text="@string/activity_tag"
         android:textSize="@dimen/tv_create_activity_text_size"
         android:gravity="center|left"
         android:layout_weight="1"/>
         <TextView
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_margin="0dp"
             android:padding="0dp"
             android:textSize="@dimen/tv_create_activity_text_size_18"
             android:text="@string/activity_inter"
             android:gravity="center"
             android:textColor="@color/white"
             android:background="@color/APP_GREEN"
             android:id="@+id/tv_activity_to_inner"
             android:textStyle="bold"
             android:layout_marginRight="-7dp"
             android:layout_weight="1"/>
         <TextView
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_margin="0dp"
             android:padding="0dp"
             android:background="@color/APP_GRAY"
             android:clickable="false"
             android:gravity="center"
             android:textSize="@dimen/tv_create_activity_text_size_18"
             android:textStyle="bold"
             android:id="@+id/tv_activity_to_out"
             android:textColor="@color/white"
             android:text="@string/activity_outer"
            android:layout_marginLeft="-7dp"
             android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/tv_create_activity_45"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/ll_create_activity_10"
        android:layout_marginLeft="@dimen/tv_create_activity_padding_left"
        android:layout_marginRight="@dimen/tv_create_activity_padding_right" >
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/activity_need_sign"
            android:textSize="@dimen/tv_create_activity_text_size"
            android:gravity="center|left"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:padding="0dp"
            android:background="@color/APP_GREEN"
            android:textSize="18sp"
            android:text="@string/activity_need_sign_yes"
            android:gravity="center"
            android:id="@+id/tv_activity_need_sigin"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginRight="-7dp"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:padding="0dp"
            android:background="@color/APP_GRAY"
            android:clickable="false"
            android:id="@+id/tv_activity_no_sign"
            android:gravity="center"
            android:textSize="@dimen/tv_create_activity_text_size_18"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/activity_need_sign_no"
            android:layout_marginLeft="-7dp"
            android:layout_weight="1"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/tv_create_activity_padding_top"
        android:layout_marginLeft="@dimen/tv_create_activity_padding_left"
        android:layout_marginRight="@dimen/tv_create_activity_padding_right"
        android:text="@string/activity_sign_date"
        android:textSize="@dimen/tv_activity_manage_text_size"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/tv_create_activity_padding_left"
        android:layout_marginRight="@dimen/tv_create_activity_padding_right"
        android:orientation="horizontal">
        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:drawableRight="@drawable/icon_calendar"
            android:singleLine="true"
            android:editable="false"
            android:id="@+id/et_begin_sign_time"
            android:textSize="@dimen/edt_create_activity_text_size"
            android:hint="@string/activity_begin_sign_date"/>
        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:editable="false"
            android:cursorVisible="false"
            android:id="@+id/et_finish_sign_time"
            android:drawableRight="@drawable/icon_calendar"
            android:textSize="@dimen/edt_create_activity_text_size"
            android:hint="@string/activity_end_sign_date"/>

    </LinearLayout>
    <Button
        android:layout_width="@dimen/tv_create_activity_100"
        android:layout_height="@dimen/tv_create_activity_40"
        android:layout_marginTop="@dimen/btn_create_activity_10"
        android:layout_marginRight="@dimen/tv_create_activity_padding_right"
        android:layout_marginEnd="@dimen/tv_create_activity_padding_right"
        android:id="@+id/btn_release"
        android:background="@color/btn_background_color"
        android:text="@string/activity_release"
        android:textSize="@dimen/tv_create_activity_text_size_18"
        android:textStyle="bold"
        android:textColor="@color/btn_text_color"
        android:layout_gravity="right" />
</LinearLayout>