<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <EditText
        android:id="@+id/et_usedAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:hint="@string/input_address"
        android:textColor="@color/edt_hint_color"
        android:textSize="@dimen/btn_login_text_size"
        android:maxLines="5"
        android:inputType="textMultiLine"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="right"
        android:layout_marginRight="10dp">

        <TextView
            android:id="@+id/tv_address_wordCounts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address_wordcount"
            android:textSize="@dimen/btn_login_text_size"
            />

        <TextView
            android:id="@+id/tv_address_wordSum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address_wordsum"
            android:textSize="@dimen/btn_login_text_size"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="@dimen/layout_height"
        android:orientation="horizontal"
        android:layout_gravity="right"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        >
        <Button
            android:id="@+id/btn_address_save"
            android:layout_width="@dimen/btn_width"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/save"
            android:textColor="@color/btn_login_color"
            android:textSize="@dimen/btn_login_text_size"
            android:background="@drawable/btn_green_style"
            />

        <Button
            android:id="@+id/btn_address_cancle"
            android:layout_width="@dimen/btn_width"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/btn_login_color"
            android:textSize="@dimen/btn_login_text_size"
            android:background="@drawable/btn_green_style"
            />
    </LinearLayout>

</LinearLayout>